        - removed prerequisite of needing to be an Administrator user on MSWin
          from the Tutorial (closes #119)
        - fixed a series of out-of-order debug logging message entries
        - added a timeout param to instance_install(), default 300 secs. If an
          install takes longer than this, it'll roll out the changes and log an
          entry of the problem (closes #110)

2.02    2016-04-22
        - fixed issue in T::BB::Tester where we weren't checking for the 'new'
          param, hence we weren't doing install if 'new' was set
        - added brief SYNOPSIS in Dispatch
        - fixed issue in Tester where the log scalar wasn't being reset after a
          run (we also now shutdown() the socket after a finished run)
        - correct issues preventing the brewbuild -i and -n flags from working
          correctly on remote testers
        - dzil dists now get a authordeps run by default, logging organized
          (closes #104)

2.01    2016-04-22
        - no functional changes
        - POD updates/fixes

2.00    2016-04-21
        - added T::BB::workdir() as a common source for workdir retrieval
        - major POD updates

1.05_02 2016-04-20
        - we now set up a log file within Tester for BrewBuild if Tester is
          logging, but not to STDOUT
        - added a POD document for the config file
        - created a Tutorial for the distributed testing environment setup

1.05_01 2016-04-19
        - we can now distribute test builds to remote Test::BrewBuild test
          servers
        - bbdispatch and bbtester scripts added, which handle the test
          distribution network/systems
        - Dispatch.pm and Tester.pm modules, containing the APIs for the
          distribution setup
        - we no longer now print anything out by default; everything is
          returned, and its up to end-user to handle
        - major debug logging improvements
        - significant code cleanup and tests implemented